# dexscreener-cli-mcp-tool

./: .env.example  .gitignore  CLAUDE.md  README.md  SECURITY.md  SKILL.md  dexscreener-mcp  dexscreener-mcp.bat  ds  ds.bat  install.bat  install.sh  pyproject.toml  test_ui.bat
.github/workflows/: ci.yml
dexscreener_cli/: cli.py  client.py  config.py  holders.py  mcp_server.py  models.py  scanner.py  scoring.py  state.py  task_runner.py  ui.py  watch_controls.py
docs/: DAEMON_DEPLOYMENT.md  DESK_ALPHA_OPINIONS.md  NEXT_TASKS.md  PRD.md  SYSTEM_ARCHITECTURE.md  UI_UX_SPEC.md
tests/: test_cli_json.py  test_mcp_server.py  test_models.py  test_scoring.py  test_security.py  test_state.py
